--- a/01_Getting_&_Knowing_Your_Data/Chipotle/Exercises.ipynb
+++ b/01_Getting_&_Knowing_Your_Data/Chipotle/Exercises.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -103,7 +103,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>order_id</th>\n      <th>quantity</th>\n      <th>item_name</th>\n      <th>choice_description</th>\n      <th>item_price</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>1</td>\n      <td>Chips and Fresh Tomato Salsa</td>\n      <td>NaN</td>\n      <td>$2.39</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>1</td>\n      <td>Izze</td>\n      <td>[Clementine]</td>\n      <td>$3.39</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>1</td>\n      <td>Nantucket Nectar</td>\n      <td>[Apple]</td>\n      <td>$3.39</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>1</td>\n      <td>Chips and Tomatillo-Green Chili Salsa</td>\n      <td>NaN</td>\n      <td>$2.39</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2</td>\n      <td>2</td>\n      <td>Chicken Bowl</td>\n      <td>[Tomatillo-Red Chili Salsa (Hot), [Black Beans...</td>\n      <td>$16.98</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>3</td>\n      <td>1</td>\n      <td>Chicken Bowl</td>\n      <td>[Fresh Tomato Salsa (Mild), [Rice, Cheese, Sou...</td>\n      <td>$10.98</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>3</td>\n      <td>1</td>\n      <td>Side of Chips</td>\n      <td>NaN</td>\n      <td>$1.69</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>4</td>\n      <td>1</td>\n      <td>Steak Burrito</td>\n      <td>[Tomatillo Red Chili Salsa, [Fajita Vegetables...</td>\n      <td>$11.75</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>4</td>\n      <td>1</td>\n      <td>Steak Soft Tacos</td>\n      <td>[Tomatillo Green Chili Salsa, [Pinto Beans, Ch...</td>\n      <td>$9.25</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>5</td>\n      <td>1</td>\n      <td>Steak Burrito</td>\n      <td>[Fresh Tomato Salsa, [Rice, Black Beans, Pinto...</td>\n      <td>$9.25</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 22
     }
    ],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -132,7 +132,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 23
     }
    ],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -185,7 +185,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 25
     }
    ],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +216,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 26
     }
    ],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -245,7 +245,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 27
     }
    ],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -277,7 +277,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>order_id</th>\n      <th>quantity</th>\n    </tr>\n    <tr>\n      <th>item_name</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Chicken Bowl</th>\n      <td>713926</td>\n      <td>761</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 28
     }
    ],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -335,7 +335,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>order_id</th>\n      <th>quantity</th>\n    </tr>\n    <tr>\n      <th>choice_description</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>[Diet Coke]</th>\n      <td>123455</td>\n      <td>159</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 30
     }
    ],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -367,7 +367,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 31
     }
    ],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {
     "tags": []
    },
@@ -392,42 +392,20 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<bound method NDFrame.head of       order_id  quantity                              item_name  \\\n",
-       "0            1         1           Chips and Fresh Tomato Salsa   \n",
-       "1            1         1                                   Izze   \n",
-       "2            1         1                       Nantucket Nectar   \n",
-       "3            1         1  Chips and Tomatillo-Green Chili Salsa   \n",
-       "4            2         2                           Chicken Bowl   \n",
-       "...        ...       ...                                    ...   \n",
-       "4617      1833         1                          Steak Burrito   \n",
-       "4618      1833         1                          Steak Burrito   \n",
-       "4619      1834         1                     Chicken Salad Bowl   \n",
-       "4620      1834         1                     Chicken Salad Bowl   \n",
-       "4621      1834         1                     Chicken Salad Bowl   \n",
-       "\n",
-       "                                     choice_description  item_price  \n",
-       "0                                                   NaN        2.39  \n",
-       "1                                          [Clementine]        3.39  \n",
-       "2                                               [Apple]        3.39  \n",
-       "3                                                   NaN        2.39  \n",
-       "4     [Tomatillo-Red Chili Salsa (Hot), [Black Beans...       16.98  \n",
-       "...                                                 ...         ...  \n",
-       "4617  [Fresh Tomato Salsa, [Rice, Black Beans, Sour ...       11.75  \n",
-       "4618  [Fresh Tomato Salsa, [Rice, Sour Cream, Cheese...       11.75  \n",
-       "4619  [Fresh Tomato Salsa, [Fajita Vegetables, Pinto...       11.25  \n",
-       "4620  [Fresh Tomato Salsa, [Fajita Vegetables, Lettu...        8.75  \n",
-       "4621  [Fresh Tomato Salsa, [Fajita Vegetables, Pinto...        8.75  \n",
-       "\n",
-       "[4622 rows x 5 columns]>"
+       "0     2.39\n",
+       "1     3.39\n",
+       "2     3.39\n",
+       "3     2.39\n",
+       "4    16.98\n",
+       "Name: item_price, dtype: float64"
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 32
     }
    ],
    "source": [
-    "mamat = lambda x: float(x[1:])\n",
-    "chipo['item_price'] = chipo.item_price.apply(mamat)\n"
+    "chipo.item_price.str.slice(1).astype(float).head(5)"
    ]
   },
   {
@@ -439,18 +417,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "dtype('float64')"
+       "dtype('O')"
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 33
     }
    ],
    "source": [
@@ -466,12 +444,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "mamat = lambda x: float(x[1:])\n",
+    "chipo['item_price'] = chipo.item_price.apply(mamat)\n",
+    "\n",
     "#Done"
    ]
   },
@@ -484,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -497,7 +478,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 35
     }
    ],
    "source": [
@@ -513,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -540,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -553,7 +534,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 37
     }
    ],
    "source": [
@@ -563,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +568,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>order_id</th>\n      <th>quantity</th>\n      <th>item_name</th>\n      <th>choice_description</th>\n      <th>item_price</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>1</td>\n      <td>Chips and Fresh Tomato Salsa</td>\n      <td>NaN</td>\n      <td>2.39</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>1</td>\n      <td>Izze</td>\n      <td>[Clementine]</td>\n      <td>3.39</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>1</td>\n      <td>Nantucket Nectar</td>\n      <td>[Apple]</td>\n      <td>3.39</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>1</td>\n      <td>Chips and Tomatillo-Green Chili Salsa</td>\n      <td>NaN</td>\n      <td>2.39</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2</td>\n      <td>2</td>\n      <td>Chicken Bowl</td>\n      <td>[Tomatillo-Red Chili Salsa (Hot), [Black Beans...</td>\n      <td>16.98</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 38
     }
    ],
    "source": [
@@ -603,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -616,7 +597,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 36
+     "execution_count": 39
     }
    ],
    "source": [
@@ -629,11 +610,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "21.39423118865867"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 40
+    }
+   ],
    "source": [
     "# Solution 2\n",
     "chipo.groupby(by=['order_id']).sum().mean()['revenue']\n"
@@ -648,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -661,7 +653,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 42
+     "execution_count": 41
     }
    ],
    "source": [
